demoshop_restAPIvsReact/src/main/java/com/example/demo/error/ForbiddenException.java
package com.example.demo.error;



public class ForbiddenException extends RuntimeException{
    private static final long serialVersionUID = 0L;

    public ForbiddenException(String err) {
        super(err);
    }
}